# seqstats

./: README.md
latex/articles/efficient-rank-order-statistics/: abstract.aux  abstract.tex~  article.aux  article.tex  article.tex~
latex/pseudo-code/: pseudo-code-library.tex
latex/pseudo-code/mad/: mad-pseudo-code.tex  mad-pseudo-code.tex~
notebooks/: change-dection-v4.ipynb  change-detection-v2.ipynb  change-detection-v3.ipynb  change-detection.ipynb  mad-algorithm.ipynb  mad-class.ipynb  mann-whitney.ipynb  median.ipynb  sad.ipynb  theil-sen.ipynb
package/: pyproject.toml
python/package/: README.md  __init.py__  pyproject.toml  setup.cfg
python/package/seqstats/: __init__.py  mad.py
python/package/seqstats/tests/: runtests.py
python/package/src/: __init.py__
python/package/src/seqstats/: __init.py__  mad.py
